--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "type": "module",
   "dependencies": {
     "@mdi/font": "^6.5.95",
+    "axios": "^0.26.1",
     "daisyui": "^2.11.0",
     "jquery": "^3.6.0",
     "sass": "^1.49.9",
